before adding scrollbars

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -33,7 +33,7 @@
 		<!-- nav -->
 		<nav class="navbar navbar-default yamm">
 			<div class="container">
-				<div class="tel-blc hidden-xs">
+				<div class="tel-blc hidden-xs pos-rel z-index-7">
 					<a href="tel:+78000000000">8 (800) 000-00-00</a>
 				</div>
 				<div class="navbar-header">
@@ -50,55 +50,38 @@
 						</li>
 
 						<!-- Grid 12 Menu -->
-						<li class="dropdown yamm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><img src="img/Menu-Icon.png" alt=""> каталог</a>
+						<li class="dropdown yamm-fw"><a href="#" id="toggle-yamm" data-toggle="dropdown" class="dropdown-toggle"><img src="img/Menu-Icon.png" alt=""> каталог</a>
+						
 							<ul class="dropdown-menu">
-								<li class="grid-demo">
+								<li class="grid-drop-mnu">
+									<div class="container">
 									<div class="row">
-										<div class="col-sm-12">.col-sm-12</div>
+										<div class="col-lg-3">
+											<ul>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+												<li><a href="#">text</a></li>
+											</ul>
+										</div>
+										<div class="col-lg-3"></div>
+										<div class="col-lg-3"></div>
+										<div class="col-lg-3"></div>
 									</div>
-									<div class="row">
-										<div class="col-sm-6">.col-sm-6</div>
-										<div class="col-sm-6">.col-sm-6</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-4">.col-sm-4</div>
-										<div class="col-sm-4">.col-sm-4</div>
-										<div class="col-sm-4">.col-sm-4</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-3">.col-sm-3</div>
-										<div class="col-sm-3">.col-sm-3</div>
-										<div class="col-sm-3">.col-sm-3</div>
-										<div class="col-sm-3">.col-sm-3</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-2">.col-sm-2</div>
-										<div class="col-sm-2">.col-sm-2</div>
-										<div class="col-sm-2">.col-sm-2</div>
-										<div class="col-sm-2">.col-sm-2</div>
-										<div class="col-sm-2">.col-sm-2</div>
-										<div class="col-sm-2">.col-sm-2</div>
-									</div>
-									<div class="row">
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
-										<div class="col-sm-1">.col-sm-1</div>
 									</div>
 								</li>
 							</ul>
+
 						</li>
-						<li class="hidden-xs"><a href=""><img src="img/logo-black.png" alt=""></a></li>
+						<li class="hidden-xs main-logo  z-index-7"><a href=""><img src="img/logo-black.png" alt=""></a></li>
 					</ul>
-					<ul class="nav navbar-nav navbar-right">
+					<ul class="nav navbar-nav navbar-right pos-rel z-index-7">
 						<li><a class="active" href="#">О компании</a></li>
 						<li><a href="#">Доставка и оплата</a></li>
 						<li><a href="#">Сервис и гарантия</a></li>
