scrollbar plugin conected

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -56,16 +56,16 @@
 								<li class="grid-drop-mnu">
 									<div class="container">
 									<div class="row">
-										<div class="col-lg-3">
+										<div id="drop-down-main-mnu" class="col-lg-3">
 											<ul>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
-												<li><a href="#">text</a></li>
+												<li><a href="#">Apple iPhone</a></li>
+												<li><a href="#">iPad</a></li>
+												<li><a href="#">MacBook</a></li>
+												<li><a href="#">iWatch</a></li>
+												<li><a href="#">iMac</a></li>
+												<li><a href="#">Аксессуары</a></li>
+												<li><a href="#">Смартфоны Xiaomi</a></li>
+												<li><a href="#">Фитнес-трекеры</a></li>
 												<li><a href="#">text</a></li>
 												<li><a href="#">text</a></li>
 											</ul>
