making tabs in nav

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -57,8 +57,8 @@
 									<div class="container">
 									<div class="row">
 										<div id="drop-down-main-mnu" class="col-lg-3">
-											<ul>
-												<li><a href="#">Apple iPhone</a></li>
+											<ul class="tabs-control">
+												<li class="active"><a  href="#">Apple iPhone</a></li>
 												<li><a href="#">iPad</a></li>
 												<li><a href="#">MacBook</a></li>
 												<li><a href="#">iWatch</a></li>
@@ -70,9 +70,54 @@
 												<li><a href="#">text</a></li>
 											</ul>
 										</div>
-										<div class="col-lg-3"></div>
-										<div class="col-lg-3"></div>
-										<div class="col-lg-3"></div>
+										<div class="col-lg-9">
+											<div class="row">
+											<!-- tab content -->
+											<div class="tabs-content">
+											<div class="item-catalog tab-1">
+										
+												<div class="col-lg-4">
+														<ul>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+														</ul>
+												</div>
+												<div class="col-lg-4">
+													<div>
+														<ul>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+															<li>iPhone</li>
+														</ul>
+													</div>
+												</div>
+												<div class="col-lg-4">
+													<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa molestias accusantium autem, rem quos reiciendis iure similique incidunt vero dolores? Quis reprehenderit laudantium minima, porro recusandae facere ad fugiat asperiores.</div>
+												</div>
+												</div>
+												<!-- end tab content -->
+												<div class="item-catalog tab-2">
+												tab-2
+												</div>
+												</div>
+											</div>
+										</div>
+										
 									</div>
 									</div>
 								</li>
