desktop dropdown mnu ended

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -78,36 +78,37 @@
 										
 												<div class="col-lg-4">
 														<ul>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															
 														</ul>
 												</div>
 												<div class="col-lg-4">
 													<div>
 														<ul>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
-															<li>iPhone</li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
+															<li><a href="#">iPhone</a></li>
 														</ul>
 													</div>
 												</div>
 												<div class="col-lg-4">
-													<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa molestias accusantium autem, rem quos reiciendis iure similique incidunt vero dolores? Quis reprehenderit laudantium minima, porro recusandae facere ad fugiat asperiores.</div>
+													<div class="advert-blc">
+													<div class="wrapper-text-advert-blc">
+															<p class="title">iPhone 7</p>
+															<p class="old-price">50 999 р</p>
+															<p class="price">29 900 р</p>
+													</div>
+													</div>
 												</div>
 												</div>
 												<!-- end tab content -->
