dropdown mnu responsive added

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -56,7 +56,7 @@
 								<li class="grid-drop-mnu">
 									<div class="container">
 									<div class="row">
-										<div id="drop-down-main-mnu" class="col-lg-3">
+										<div id="drop-down-main-mnu" class="col-lg-3 col-md-3">
 											<ul class="tabs-control">
 												<li class="active"><a  href="#">Apple iPhone</a></li>
 												<li><a href="#">iPad</a></li>
@@ -70,13 +70,13 @@
 												<li><a href="#">text</a></li>
 											</ul>
 										</div>
-										<div class="col-lg-9">
+										<div class="col-lg-9 col-md-9">
 											<div class="row">
 											<!-- tab content -->
 											<div class="tabs-content">
 											<div class="item-catalog tab-1">
 										
-												<div class="col-lg-4">
+												<div class="col-lg-4 col-md-4 col-sm-4 ">
 														<ul>
 															<li><a href="#">iPhone</a></li>
 															<li><a href="#">iPhone</a></li>
@@ -88,7 +88,7 @@
 															
 														</ul>
 												</div>
-												<div class="col-lg-4">
+												<div class="col-lg-4 col-md-4 col-sm-4 ">
 													<div>
 														<ul>
 															<li><a href="#">iPhone</a></li>
@@ -101,12 +101,12 @@
 														</ul>
 													</div>
 												</div>
-												<div class="col-lg-4">
+												<div class="col-lg-4 col-md-4 col-sm-4">
 													<div class="advert-blc">
 													<div class="wrapper-text-advert-blc">
 															<p class="title">iPhone 7</p>
 															<p class="old-price">50 999 р</p>
-															<p class="price">29 900 р</p>
+															<p class="price">28 900 р</p>
 													</div>
 													</div>
 												</div>
