dropdown mnu added to all pages

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -113,7 +113,13 @@
 												</div>
 												<!-- end tab content -->
 												<div class="item-catalog tab-2">
-												tab-2
+												<div class="row">
+																<div class="col-lg-12">
+																	<ul>
+																		<li><a href="">еще один пункт меню</a></li>
+																	</ul>
+																</div>
+															</div>
 												</div>
 												</div>
 											</div>
