added font awsome some + change mnu to CLOSE when clicked

--- a/app/card.html
+++ b/app/card.html
@@ -306,7 +306,7 @@
 																						<div class="col-lg-6 col-md-6 col-sm-6">
 																							<div class="credit">
 																								<p>Покупка в кредит</p>
-																								<a class="btn-white" href="#"><span class="icon-wallet"></span> Оформить</a>
+																								<a class="btn-white" href="#"><i class="fa fa-credit-card" aria-hidden="true"></i> Оформить</a>
 																							</div>
 																						</div>
 
@@ -358,7 +358,7 @@
 																				<input type="text" class="form-control " placeholder="Search for...">
 																				<span class="input-group-btn">
 																					<button class="btn search-btn" type="button">
-																						<i class="fa fa-search" aria-hidden="true"></i>
+																						<i class="fa fa-mouse-pointer" aria-hidden="true"></i>
 																					</button>
 																				</span>
 																			</div>
