some fixes dropdown mnu

--- a/app/card.html
+++ b/app/card.html
@@ -131,7 +131,7 @@
 							</ul>
 
 						</li>
-						<li class="hidden-xs main-logo  z-index-7"><a href="/"><img src="img/logo-black.png" alt=""></a></li>
+						<li class="hidden-xs main-logo  z-index-7"><a href="/"><img src="img/logo-black.png" alt=""><img src="img/logo-white.png" alt=""></a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right pos-rel z-index-7">
 						<li><a  href="">О компании</a></li>
