--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
 						</li>
 
 						<!-- Grid 12 Menu -->
-						<li class="dropdown yamm-fw"><a href="#" id="toggle-yamm" data-toggle="dropdown" class="dropdown-toggle z-index-7"><img src="img/Menu-Icon.png" alt=""> каталог</a>
+						<li class="dropdown yamm-fw"><a href="#" id="toggle-yamm" data-toggle="dropdown" class="dropdown-toggle z-index-7"><img id="btn-drop-down" src="img/Menu-Icon.png" alt=""> <img id="close-btn-drop-down" src="img/Menu-Icon-close.png" alt="">каталог</a>
 							
 							<ul class="dropdown-menu">
 								<li class="grid-drop-mnu">
