implement fixed dropdo to all pages

--- a/app/delivery.html
+++ b/app/delivery.html
@@ -50,7 +50,7 @@
 						</li>
 
 						<!-- Grid 12 Menu -->
-						<li class="dropdown yamm-fw"><a href="#" id="toggle-yamm" data-toggle="dropdown" class="dropdown-toggle"><img src="img/Menu-Icon.png" alt=""> каталог</a>
+						<li class="dropdown yamm-fw"><a href="#" id="toggle-yamm" data-toggle="dropdown" class="dropdown-toggle"><img id="btn-drop-down" src="img/Menu-Icon.png" alt=""> <img id="close-btn-drop-down" src="img/Menu-Icon-close.png" alt=""> каталог</a>
 							
 							<ul class="dropdown-menu">
 								<li class="grid-drop-mnu">
@@ -131,13 +131,13 @@
 							</ul>
 
 						</li>
-						<li class="hidden-xs main-logo  z-index-7"><a href="/"><img src="img/logo-black.png" alt=""></a></li>
+						<li class="hidden-xs main-logo  z-index-7"><a href="/"><img src="img/logo-black.png" alt=""><img src="img/logo-white.png" alt=""></a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right pos-rel z-index-7">
-						<li><a  href="/">О компании</a></li>
-						<li><a class="active" href="delivery.html">Доставка и оплата</a></li>
-						<li><a href="service.html">Сервис и гарантия</a></li>
-						<li><a href="contacts.html">Контакты</a></li>
+						<li><a  href="">О компании</a></li>
+						<li><a  href="delivery.html">Доставка и оплата</a></li>
+						<li><a  href="service.html">Сервис и гарантия</a></li>
+						<li><a  href="contacts.html">Контакты</a></li>
 						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span class="badge">5</span></li>
 						<li><a class="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
 					</ul>
