interactive img added

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -678,7 +678,7 @@
 					<!-- wide-good item -->
 					<div class="col-lg-8 col-md-8">
 						<div class="item-good-wide">
-							<div class="good-wide-img-blc">
+							<div class="good-wide-img-blc view overlay hm-zoom">
 								<img src="img/good-wide-1.png" alt="">
 							</div>
 							<div class="good-wide-wrapper-action">
@@ -702,7 +702,7 @@
 						<!-- wide-good item -->
 						<div class="col-lg-8 col-md-8">
 							<div class="item-good-wide">
-								<div class="good-wide-img-blc">
+								<div class="good-wide-img-blc view overlay hm-zoom">
 									<img src="img/good-wide-1.png" alt="">
 								</div>
 								<div class="good-wide-wrapper-action">
