--- a/app/index.html
+++ b/app/index.html
@@ -255,7 +255,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-1.png" alt="">
 								</div>
 								<h3>iPhone</h3>
@@ -270,7 +270,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-2.png" alt="">
 								</div>
 								<h3>iPad</h3>
@@ -285,7 +285,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-1.png" alt="">
 								</div>
 								<h3>iPhone</h3>
@@ -300,7 +300,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-1.png" alt="">
 								</div>
 								<h3>iPhone</h3>
@@ -318,7 +318,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-1.png" alt="">
 								</div>
 								<h3>iPhone</h3>
@@ -333,7 +333,7 @@
 						<div class="col-lg-3 col-md-3">
 
 							<div class="item-good">
-								<div class="good-img-blc">
+								<div class="good-img-blc view overlay hm-zoom">
 									<img src="img/good-2.png" alt="">
 								</div>
 								<h3>iPad</h3>
@@ -346,15 +346,15 @@
 						
 						<!-- wide-good item -->
 						<div class="col-lg-6 col-md-6">
-							<div class="item-good-wide">
-								<div class="good-wide-img-blc">
+							<div class="item-good-wide ">
+								<div class="good-wide-img-blc view overlay hm-zoom">
 									<img src="img/good-wide-1.png" alt="">
 								</div>
-								<div class="good-wide-wrapper-action">
+								<div class="good-wide-wrapper-action ">
 									<span>от 79 900 Руб.</span>
 									<a class="btn" href="card.html"><i class="fa fa-shopping-basket" aria-hidden="true"></i>Оформить</a>
 								</div>
-								<div class="good-wide-wrapper-text">
+								<div class="good-wide-wrapper-text ">
 									<h3>Предзаказ iPhone 8 Plus</h3>
 									<span>16Gb space gray</span>
 									<p>Предусматривается небольшое текстовое описание акции 
