nav menu shop and search btn cahnged for wp

--- a/app/index.html
+++ b/app/index.html
@@ -138,8 +138,8 @@
 						<li><a href="delivery.html">Доставка и оплата</a></li>
 						<li><a href="service.html">Сервис и гарантия</a></li>
 						<li><a href="contacts.html">Контакты</a></li>
-						<li><a class="shop-btn" href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span class="badge">5</span></li>
-						<li><a class="search-btn" href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+						<li class="shop-btn"><a  href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a><span class="badge">5</span></li>
+						<li class="search-btn"><a  href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
 					</ul>
 				</div>
 			</div>
